app/assets/stylesheets/dashboard/custom-style.scss
.left-panel {
  .fa {
    line-height: inherit;
  }
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.project-settings-header {
  margin: 10px -20px 0px 0px;
}

.breadcrumb > span {
  margin-right: 10px;
}

.list-group-item:hover {
  background-color: #f5f5f5;
}

.file-edit-buttons {
  li {
    cursor: pointer;
  }
}

.multi-select {
  width: 50%;
}

.test-run-panel-heading {
  display: inline-block;
  width: 100%;
}

.branches {
  .btn {
    text-align: left;
  }
}

.content {
  a:hover {
    text-decoration: underline;
  }

  header a:hover {
    text-decoration: none;
  }
}


.progress {
  height: 8px;
  margin-top: 5px;
  margin-bottom: 10px;
  .status {
    margin-top: 5px;
    margin-bottom: 5px;
    overflow: hidden;
    -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
    transition: width 2s;
  }
}

.page-title {
  font-size: 30px;
  margin-top: -15px;
  padding-left: 11px;
  padding-bottom: 4px;
}

.breadcrumb {
  margin-bottom: 10px;
}

.panel {
  min-width: 800px;
}

/* Devise */


.devise-form {
  width: 380px;
  margin: 30px auto 140px;
}

.devise-form {

  .panel {
    min-width: initial;
  }

  .alert {
    margin: 0;
  }

  .form-group {
    margin: 14px 0 0 0;
  }

  .btn-social {
    position: relative;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    &>:first-child {
      position: absolute;
      left: 0;
      top: 0;
      bottom: 0;
      width: 32px;
      line-height: 34px;
      font-size: 1.6em;
      text-align: center;
      border-right: 1px solid rgba(0,0,0,0.2);
    }
  }

  .control-label.label-static {
    top: -40px;
  }
}

/* Devise - end */
.commit-info {
  clear: both;
  height: 45px;
  .message {
  }

  .build-link {
    text-decoration: none;
    &:hover {
      text-decoration: none;
    }
  }

  .text {
    line-height: 16px;
    font-size: 14px;

    i {
      color: grey;
    }
  }

  .photo {
    border: 1px solid #ddd;
    float: left;
    margin: -1px 5px 3px 0px;
    width: 40px;
    height: 40px;
    border-radius: 5px;
  }
}

.source-button {
  margin-top: 1px;
  height: 34px;

  .source-link {
    margin-top: -3px;
    text-decoration: none;

    .message {
      text-decoration: underline;
    }
    &:hover {
      text-decoration: none;
    }
  }

  .source-logo{
    margin: -3px 4px 0px -2px;
    width: 20px;
    height: 20px;
  }
}

.page-subtitle {
  font-size: 15px;
}

.breadcrumb-bar {
  display: inline-block;
  width: 100%;
  height: 36px;

  .breadcrumb-left-side {
    float: left;
  }

  .breadcrumb-actions {
    float: right;
    padding: 7px;
  }
}

.more-info {
  color: grey;
  display: block;
  font-size: 12px;
}

.display-error {
  text-align: left;

  div {
    max-height: 500px;
    overflow: auto;
    white-space: pre-wrap;
    max-width: 100vw;
    font-size: 12px;
    clear: left;
  }

  .command { color: grey; }
}

.show-all-area {
  cursor: pointer;

  label {
    float: right;
    padding: 3px;
  }

  input {
    float: right;
  }
}

.console {
  font-family: Monaco, monospace;
  color: #CCCCCC;
  background: #000000;
  padding: 10px;
  scrollbar-face-color: #ccc;
}
.console::-webkit-scrollbar {
  width:12px;
  color: black;
  background-color:#cccccc;
}

.console::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: grey;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}


.branch {

  display: block;
  margin: 0;
  text-align: left;

  .name {
    text-overflow: ellipsis;
    overflow: hidden;
    a {
      text-decoration: none;
    }

    &::before {
      vertical-align: middle;
      content: '';
      display: inline-block;
      width: 18px;
      height: 18px;
      background: image-url("branch_icon")  no-repeat center center;
      background-size: 18px 18px;
    }
  }
}

.github-fetch-overlay {
  position: absolute;
  opacity: 0.8;
  color: black;
  background-color: #ddd;
  z-index: 3;
  width: 100%;
  height: 100%;
  right: 0px;
}

.sign-up-cta-header {
  color: #3bc0c3;

  .sign-up-btn {
    padding-left: 0px;
    margin-top: 4px;
  }

  .sign-up-text {
    font-size: medium;
    margin-top: 9px;
  }
}

.badge-area {
  text-align: right;
  float: right;
  margin-top: 4px;
}

.provider-list {
  font-size: 18px;
  ul {
    padding: 10px;
  }

  i {
    margin-right: 5px;
    font-size: 10px;
  }
}

.test-run-row {
  padding-top: 5px;
  padding-bottom: 5px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.panelized {
  border: 1px solid #e9e9e9;
  margin: 0px -20px 0px 0px;
  background-color: #fff;
  border-radius: 4px;
  padding: 10px;

  h3 {
    margin-top: px;
  }
}

.border-right {
  border-right: 1px solid #ccc;
}

.active-hr {
  position: absolute;
  margin-right: 10px;
  z-index: -1;
  width: 100px;
  margin-left: 130px;
  margin-top: 22px;
}

.project-title {
  h4 {
    display: inline-block;
  }

  img {
    vertical-align: bottom;
  }
  padding: 4px;
  white-space: nowrap;
}

.current-branch {
  border: 1px solid #ddd;
  background-color: #eee;
}

.track-a-branch {
  display: block;
  padding: 10px 30px;
  text-decoration: underline;

}

.project-links {
  ul{
    @media screen and (min-width: $screen-md-max) {
      float: right;
    }

  }

  margin: 4px;

  li {
    display: inline-block;
  }

  ul {
    border-radius: 4px;
    padding-left: 0px;
  }

  a {
    border-radius: 4px;
    display: inline-block;
    color: #929292;
    padding: 6px;
    margin: 0px;
    display: inline-block;

    &:hover {
      color: black;
    }

    &.active {
      color: black;
      background-color: #e7e7e7;
    }
  }

}

.project-title-bar {
  border-radius: 4px;
}

.fa {
  margin-right: 5px;
}

.time-div {
  .fa {
    margin-right: 2px;
  }
  font-size: 12px;
  white-space: nowrap;
}

.test-run-action {
  @media screen and (min-width: $screen-md-max) {
    margin-top: 10px;
  }
}

.right-side {
  @media screen and (min-width: $screen-sm-max) {
    float: right;
  }
}

.left-side {
  @media screen and (min-width: $screen-sm-max) {
    float: left;
  }
}

.docker-compose-preview .CodeMirror {
  background-color: #EEE;
  border-radius: 5px;
  border: none;
  padding: 5px;
  min-height: 470px;
  margin: 14px 0 0 0;
}

.CodeMirror {
  border: 1px solid #CCC;
}

.loading-overlay {
  display: none;
  position: absolute;
  opacity: 0.8;
  color: black;
  background-color: #FFF;
  z-index: 3;
  width: 100%;
  height: 100%;
  right: 0px;

  .loading-content {
    font-size: 120%;
    z-index: 100;
    position: absolute;
    margin-left: -30px;
    left: 50%;
    top: 50%;
  }
}

.test-job {
  padding-top: 5px;
  padding-bottom: 5px;
  margin-top: 10px;
  margin-bottom: 10px;
  border-bottom: 1px solid #e9e9e9;

  .job-name {
    vertical-align: middle;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    i {
      margin-left: 3px;
    }

    span {
      vertical-align: text-bottom;
    }
    word-break: break-word;
  }
}

.admin-bar {
  margin-top: 10px;
  background-color: #eee;
  border-radius: 5px;
  border: 1px solid #e9e9e9;
}

.times-col {
  margin-bottom: 5px;
}

.rotate{
  -moz-transition: all .5s linear;
  -webkit-transition: all .5s linear;
  transition: all .5s linear;
}

.rotate.down{
  -moz-transform:rotate(90deg);
  -webkit-transform:rotate(90deg);
  transform:rotate(90deg);
}

.disabled {
  color: grey;
  cursor: default;

  &:hover {
    color: grey;
  }

  &:active {
    color: grey;
  }
  &:focus{
    color: grey;
  }
}

.progress-stats {
  @media screen and (min-width: $screen-md-max) {
    margin-top: -20px;
  }
}

.btn-primary.disabled {
  background-color: #3bc0c3;
  border: 1px solid #3bc0c3;
}

.ellipsis-text {
  text-overflow: ellipsis;
  overflow: hidden;
}

.test-run-header {
  float: left;
  margin-top: 0px;
  margin-right: 5px;
}

.clear-floats {
  clear: both;
}

/* Bootstrap overrides */

body.settings, body.project_files {
  .form-group {
    margin: 14px 0 0 0;
  }
}

.list-group .list-group-separator:before {
  width: 100%;
}

.form-group select {
  -webkit-appearance: menulist;
  appearance: menulist;
  -moz-appearance: menulist;
}

.btn-group-vertical {
  width: 100%;
}

.modal-footer {
  input {
    margin: 0;
    padding-left: 16px;
    padding-right: 16px;
    width: auto;
  }
}

.alert {
  margin-left: 15px;
}

.label {
  display: inline;
  padding: .2em .6em .3em;
  font-size: 90%;
  font-weight: bold;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: .25em;
}

.checkbox-material {
  margin-right: 10px;
}

/* Our custom classes */
.m-r-0 {
  margin-right: 0px;
}

.m-l-0 {
  margin-left: 0px;
}

.m-t-0 {
  margin-top: 0px;
}

.m-b-0 {
  margin-bottom: 0px;
}

.m-r-5 {
  margin-right: 5px;
}

.m-l-5 {
  margin-left: 5px;
}

.m-t-5 {
  margin-top: 5px;
}

.m-b-5 {
  margin-bottom: 5px;
}


.m-r-10 {
  margin-right: 10px;
}

.m-l-10 {
  margin-left: 10px;
}

.m-t-10 {
  margin-top: 10px;
}

.m-b-10 {
  margin-bottom: 10px;
}

.m-r-15 {
  margin-right: 15px;
}

.m-l-15 {
  margin-left: 15px;
}

.m-t-15 {
  margin-top: 15px;
}

.m-b-15 {
  margin-bottom: 15px;
}

.m-r-20 {
  margin-right: 20px;
}

.m-l-20 {
  margin-left: 20px;
}

.m-t-20 {
  margin-top: 20px;
}

.m-b-20 {
  margin-bottom: 20px;
}

/* Error pages */
.error-page {
  min-height: 80%;
  min-height: 80vh;
  display: flex;
  align-items: center;

  img {
    width: 100%;
  }
}
/* Error pages - End */

